fix: alignment issues

--- a/src/styles/lottie.scss
+++ b/src/styles/lottie.scss
@@ -33,7 +33,7 @@
   }
 
   .circle-container {
-    @include on-circle($item-count: 8, $circle-size: 75dvw, $item-size: 1em); 
+    @include on-circle($item-count: 8, $circle-size: 35dvh, $item-size: 1em); 
   }
 
 // loading
